# hust_computer_graphics_homework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: CMakeLists.txt
res/model/: model.mtl
src/: CMakeLists.txt  camera.cpp  cube.cpp  main.cpp  shader.cpp  stb_image.cpp  test_cube.cpp
src/include/algo/: camera.h  cube.h  linmath.h  mesh.h  model.h  shader.h
src/shaders/: colors.fs  colors.vs
